# cr-agent

./: .env.example  .gitignore  ADK_REFACTOR_PLAN.md  README.md  pyproject.toml  requirements.txt
adk/: diff_parser.py  prompts.py  run.py
adk/agents/: android_reviewer.py  backend_reviewer.py  caching_reviewer.py  concurrency_reviewer.py  db_schema_reviewer.py  diff_reader.py  frontend_reviewer.py  gate.py  instruction_builder.py  planner.py  registry.py  root_agent.py  security_reviewer.py
benchmark/: run_benchmark.py  test_prs.json
benchmark/fixtures/api_contract_mismatch/: pr.diff
benchmark/fixtures/api_contract_mismatch/backend/api/: OrderController.kt
benchmark/fixtures/auth_bypass_chain/: pr.diff
benchmark/fixtures/cached_stale_read/: pr.diff
benchmark/fixtures/concurrency_race/: pr.diff
benchmark/fixtures/concurrency_race/app/cache/: ProfileCache.kt
benchmark/fixtures/cross_file_logic_bug/: pr.diff
benchmark/fixtures/db_migration_mismatch/: pr.diff
benchmark/fixtures/event_handler_double_fire/: pr.diff
benchmark/fixtures/false_positive_refactor/: pr.diff
benchmark/fixtures/java_missing_transaction/: pr.diff
benchmark/fixtures/java_sql_injection/: pr.diff
benchmark/fixtures/kotlin_n_plus_one/: pr.diff
benchmark/fixtures/large_pr_noise/: pr.diff
benchmark/fixtures/missing_auth_offscreen/: pr.diff
benchmark/fixtures/no_bug_clean_pr/: pr.diff
benchmark/fixtures/resource_leak/: pr.diff
benchmark/fixtures/single_file_null_deref/: pr.diff
deep_agents/: agent.py  prompts.py  run.py
shared/: git_client.py  model_config.py  schemas.py
shared/tools/: __init__.py
tests/: test_diff_parser.py  test_gate.py  test_instruction_builder.py  test_pipeline.py  test_registry.py  test_root_agent.py  test_run.py  test_smoke.py
(+29 files in other folders)
