[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cr-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1",
    "google-adk>=2.0",
    "litellm>=1.40",
    "pydantic>=2.0",
    "pygithub>=2.0",
    "python-gitlab>=4.0",
    "httpx>=0.27",
    "click>=8.0",
    "langchain-litellm>=0.7.0",
    "python-dotenv>=1.0",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "deep_agents", "adk", "benchmark"]

[tool.ruff]
line-length = 100
